pwnotify service improvements and fixes

--- a/server/src/main/resources/password/pwm/i18n/Admin.properties
+++ b/server/src/main/resources/password/pwm/i18n/Admin.properties
@@ -234,6 +234,12 @@ Statistic_Label.PeopleSearchDetails=PeopleSearch Detail Views
 Statistic_Description.PeopleSearchDetails=Number of detailed user views executed using the people search module.
 Statistic_Label.PeopleSearchOrgChart=PeopleSearch Org Chart Views
 Statistic_Description.PeopleSearchOrgChart=Number of organisational chart views executed using the people search module.
+Statistic_Label.PwNotifyJobs=Password Notification Jobs Started
+Statistic_Description.PwNotifyJobs=Number of password expiration notification jobs that have been started.
+Statistic_Label.PwNotifyJobErrors=Password Notification Job Errors
+Statistic_Description.PwNotifyJobErrors=Number of password expiration notification jobs that have ended with an error.
+Statistic_Label.PwNotifyJobEmailsSent=Password Notification Job Emails Sent
+Statistic_Description.PwNotifyJobEmailsSent=Number of emails that have been sent by password expiration notification jobs.
 Statistic_Label.HelpdeskPasswordSet=Help Desk Password Resets
 Statistic_Description.HelpdeskPasswordSet=Number of password modifications initiated using the Help Desk module.
 Statistic_Label.HelpdeskUserLookup=Help Desk User Lookups
