--- a/server/src/main/resources/password/pwm/i18n/Health.properties
+++ b/server/src/main/resources/password/pwm/i18n/Health.properties
@@ -33,6 +33,7 @@ HealthMessage_LDAP_TestUserOK=LDAP test user account is functioning normally for
 HealthMessage_LDAP_AD_Unsecure=%1% is not configured as a secure connection.  Active Directory requires a secure connection to allow password changes.
 HealthMessage_LDAP_AD_StaticIP=%1% should be configured using a dns hostname instead of an IP address.  Active Directory can sometimes have errors when using an IP address for configuration.
 HealthMessage_Email_SendFailure=Unable to send email due to error: %1%
+PwNotify_Failure=Error while sending password notification emails: %1%
 HealthMessage_MissingResource=missing resource: bundle=%1%, locale=%2%, key=%3%
 HealthMessage_BrokenMethod=broken method invocation for '%1%', error: %2%
 HealthMessage_Appliance_PendingUpdates=Appliance updates are available.
@@ -47,7 +48,7 @@ HealthMessage_Config_ParseError=%1% error parsing setting %2%: %3%
 HealthMessage_Config_UsingLocalDBResponseStorage=The setting %1% is configured to store user data in the LocalDB.  This should never be used in a production environment.
 HealthMessage_Config_WeakPassword=%1% strength of password is weak (%2%/100); increase password length/complexity for proper security
 HealthMessage_Config_LDAPUnsecure=%1% url is configured for non-secure connection: %2%
-HealthMessage_Config_MissingDB=The configuration uses database storage, but database connection settings are not set
+HealthMessage_Config_MissingDB=The configuration requires database storage due to setting %1%, but database connection settings are not set
 HealthMessage_Config_MissingLDAPResponseAttr=%1% includes ldap storage, but %2% is not configured
 HealthMessage_Config_URLNotSecure=URL is not secure (https) for setting %1%
 HealthMessage_Config_NoRecoveryEnabled=No forgotten password recovery options are enabled
