--- a/server/src/main/resources/password/pwm/i18n/Display.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display.properties
@@ -137,6 +137,7 @@ Display_PleaseWaitPassword=Your password is being changed. This process may take
 Display_Random=Random
 Display_RecoverVerificationChoice=Please select one of the following methods to verify your identity.  Note\: If your administrator requires multiple forms of verification, you will be redirected back to this page until all verification criteria is met.
 Display_RecoverTokenSendChoices=To verify your identity, a security code will be sent to you.  Please choose which method you would prefer to receive your security code.
+Display_RecoverTokenSendOneChoice=To verify your identity, a security code will be sent to you at %1%.
 Display_RecoverTokenSendChoiceEmail=Send code to your registered email address.
 Display_RecoverTokenSendChoiceSMS=Send code to your mobile phone using text messaging (SMS).
 Display_RecoverChoiceReset=Set a new password.  If you have forgotten your password and would like to set a new one, click here.  Your account will also be unlocked when you set a new password.
