--- a/server/src/main/resources/password/pwm/i18n/Display.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display.properties
@@ -99,6 +99,7 @@ Display_Hours=hours
 Display_IdleTimeout=Idle Timeout\:
 Display_IdleWarningMessage=Your session is about to timeout.  Please click anywhere on this page to resume.
 Display_IdleWarningTitle=Idle Timeout
+Display_InvalidVerification=Viewing details only available after a user has been successfully verified
 Display_JavascriptRequired=Javascript is required to view this page.
 Display_LeaveDirtyPasswordPage=If you leave this page, your password will not be changed.
 Display_Login=
@@ -175,6 +176,7 @@ Display_TokenDestination=Token Destination
 Display_TokenResend=Your security code should arrive right away.  If you have waited for a while and haven't yet received a code, click the resend code button to receive a new code.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
+Display_ViewDetails=View Details
 Display_WarnExistingOtpSecretTime=You have already enrolled your device on <span class\="timestamp">%1%</span>.  You can test your current device by typing in the generated code below.  If you continue, you can re-configure your current device.
 Display_WarnExistingOtpSecret=You have already enrolled your device.  You can test your current device by typing in the generated code below.  If you continue, you can re-configure your current device.
 Display_WarnExistingResponseTime=You have already setup your challenge/response answers on <span class\="timestamp">%1%</span>.  If you continue, you can re-answer your questions.
