fix token links in emails

--- a/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -309,6 +309,7 @@ Setting_Description_display.showDetailedErrors=Enable this option to display det
 Setting_Description_display.showHidePasswordFields=Enable this option to allow the users to toggle the show/hide masked (hidden) data input fields, where appropriate.  This setting applies to all HTML masked password fields, regardless of the actual data type.
 Setting_Description_display.showLoginPageOptions=Enable this option to have the login page display the "Forgotten Password" and other options (if you enabled those components).
 Setting_Description_display.showSuccessPage=Enable this option to display a "success" page to the user informing the user the action completed successfully.  You can bypass this page by changing this setting to false.
+Setting_Description_display.tokenSuccessPage=Enable this option to show a page to users after they enter their tokens successfully.
 Setting_Description_display.updateAttributes.agreement=<p>Specify a message to display to the users before allowing them to update their profiles. If blank, @PwmAppName@ does not display the update profile agreement page to the users. This message can include HTML tags.
 Setting_Description_email.activation=Define this template to send an email to users after a successful activation.
 Setting_Description_email.activation.token=Define this template to send an email during the activation verification process. You can use %TOKEN% to insert the token value into the email.
@@ -805,6 +806,7 @@ Setting_Label_display.showDetailedErrors=Show Detailed Error Messages
 Setting_Label_display.showHidePasswordFields=Enable Showing Masked Fields
 Setting_Label_display.showLoginPageOptions=Show Login Page Options
 Setting_Label_display.showSuccessPage=Show Success Pages
+Setting_Label_display.tokenSuccessPage=Show Token Entry Success Pages
 Setting_Label_display.updateAttributes.agreement=Update Profile Agreement Message
 Setting_Label_email.activation=Activation Email
 Setting_Label_email.activation.token=Activation Verification Email
