add support for photo uploads in update profile

--- a/server/src/main/resources/password/pwm/i18n/Display.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display.properties
@@ -59,6 +59,7 @@ Button_TokenResend=Resend Code
 Button_Unlock=Unlock
 Button_UnlockPassword=Unlock Password
 Button_Update=Update
+Button_Upload=Upload
 Button_Verify=Verify
 Button_Verifications=Verifications
 Button_OK=OK
