--- a/server/src/main/resources/password/pwm/i18n/Error.properties
+++ b/server/src/main/resources/password/pwm/i18n/Error.properties
@@ -160,6 +160,8 @@ Error_ApplicationNotRunning=This functionality is not available until the applic
 Error_EmailSendFailure=Error sending email item %1%, error: %2%
 Error_PasswordOnlyBad=Password incorrect.  Please try again.
 Error_RecoverySequenceIncomplete=A problem occurred during the forgotten password sequence, please try again.
+Error_FileTypeIncorrect=The file type is not correct.
+Error_FileTooLarge=The file is too large.
 
 Error_RemoteErrorValue=Remote Error: %1%
 
