Clean up helpdesk module. Add missing translation strings, add title showing when there are no responses, fix various css issues including flex and RTL display, fix javascript error thrown in IE when Verify button is clicked.

--- a/server/src/main/resources/password/pwm/i18n/Display.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display.properties
@@ -107,6 +107,7 @@ Display_Login=
 Display_LoginPasswordOnly=Please enter your password below.  Your current password is required to access this application.
 Display_Logout=You are now signed out.
 Display_LogoutPublic=Your session has timed out due to inactivity.
+Display_MatchCondition=Match Condition
 Display_Minute=minute
 Display_Minutes=minutes
 Display_NAAF_PASSWORD=Please provide your NAAF authentication password.
@@ -121,6 +122,7 @@ Display_NAAF_HOTP=Please enter your HOTP value.
 Display_NAAF_VOICE=The voice verification process has started.  Please continue when complete.
 Display_NewUser=To register a new account, please complete the following form.
 Display_NewUserProfile=To register a new account, please select a profile.
+Display_NoResponses=User does not have responses
 Display_PasswordExpired=Your password has expired.  You must set a new password now.
 Display_PasswordGeneration=The following passwords have been randomly generated for you.  These passwords are based on real words to make them easier to remember, but have been modified to make them difficult to guess.
 Display_PasswordNoExpire=Your password does not expire.
@@ -296,6 +298,8 @@ Title_ForgottenUsername=Forgotten User Name
 Title_GuestRegistration=Guest Registration
 Title_GuestUpdate=Update Guest User
 Title_Helpdesk=Help Desk
+Title_HelpDeskCard=Help Desk Cards
+Title_HelpDeskTable=Help Desk Table
 Title_LocaleSelect=Locale Selection
 Title_Login=Please Sign in
 Title_Logout=Sign out
