--- a/client/src/i18n/translations_en.json
+++ b/client/src/i18n/translations_en.json
@@ -24,6 +24,7 @@
   "Display_HelpdeskOtpValidation": "Instruct the user to load their mobile authentication app and share the current pass code.",
   "Display_InvalidVerification": "Viewing details only available after a user has been successfully verified",
   "Display_MatchCondition": "Match Condition",
+  "Display_NoResponses": "User does not have responses",
   "Display_PasswordGeneration": "The following passwords have been randomly generated for you.  These passwords are based on real words to make them easier to remember, but have been modified to make them difficult to guess.",
   "Display_PasswordPrompt": "Please type your new password",
   "Display_PleaseWait": "Loading...",
@@ -45,7 +46,6 @@
   "Long_Title_VerificationSend": "Before this user can be selected, the user's identity must be verified.  Please select a verification method.",
   "Placeholder_Search": "Search",
   "Title_ChangePassword": "Change Password",
-  "Title_Details": "Details",
   "Title_DirectReports": "Direct Report(s)",
   "Title_HelpDesk": "Help Desk",
   "Title_HelpDeskCard": "Help Desk Cards",
