Fix misleading error message for Password_SameAsAttr
By default Pwm checks if the password contains cn, sn or givenName. When any of
these are allowed to be short (e.g. 2 characters), the likelihood of a long,
strong password consisting of random characters matching any of those is big. So
do not tell the user that password is "too obvious" if it happens to contain a
user attribute by accident. Rather give the user a better idea of the problem so
that he/she can fix it.

--- a/server/src/main/resources/password/pwm/i18n/Error.properties
+++ b/server/src/main/resources/password/pwm/i18n/Error.properties
@@ -45,7 +45,7 @@ Password_InvalidChar=New password has an invalid character
 Password_RequiredMissing=New password is missing a required character
 Password_InWordlist=New password is too common
 Password_SameAsOld=New password is the same as the current password
-Password_SameAsAttr=New password is too obvious
+Password_SameAsAttr=New password contains a user attribute
 Password_FirstIsNumeric=The first character must not be numeric
 Password_LastIsNumeric=The last character must not be numeric
 Password_FirstIsSpecial=The first character must not be a symbol (non alpha-numeric) character
