--- a/server/src/main/resources/password/pwm/i18n/Error_fi.properties
+++ b/server/src/main/resources/password/pwm/i18n/Error_fi.properties
@@ -46,7 +46,7 @@ Password_InvalidChar=Uudessa salasanassa on kielletty merkki
 Password_RequiredMissing=Uudesta salasanasta puuttuu vaadittu merkki
 Password_InWordlist=Uusi salasana on liian yleinen
 Password_SameAsOld=Uusi salasana on sama kuin nykyinen
-Password_SameAsAttr=Uusi salasana on liian heikko
+Password_SameAsAttr=Salasana sis\u00e4lt\u00e4\u00e4 k\u00e4ytt\u00e4j\u00e4n attribuutin
 Password_FirstIsNumeric=Ensimm\u00e4inen merkki ei saa olla numeerinen
 Password_LastIsNumeric=Viimeinen merkki ei saa olla numeerinen
 Password_FirstIsSpecial=Ensimm\u00e4inen merkki ei saa olla erikoismerkki
