--- a/client/src/i18n/translations_en.json
+++ b/client/src/i18n/translations_en.json
@@ -1,8 +1,10 @@
 {
+  "Button_AddSearchAttribute": "Add Search Attribute",
   "Button_Attributes": "User Data",
   "Button_Cancel": "Cancel",
   "Button_ChangePassword": "Change Password",
   "Button_ClearResponses": "Clear Answers",
+  "Button_Close": "Close",
   "Button_CloseWindow": "Close Window",
   "Button_Confirm": "Confirm",
   "Button_Delete": "Delete",
@@ -12,6 +14,7 @@
   "Button_More": "More",
   "Button_OK": "OK",
   "Button_OTP": "OTP",
+  "Button_Remove": "Remove",
   "Button_Show": "Show",
   "Button_SMS": "SMS",
   "Button_Unlock": "Unlock",
@@ -31,6 +34,7 @@
   "Display_Random": "Random",
   "Display_SearchResultsExceeded": "Search results exceeded maximum search size",
   "Display_SearchResultsNone": "No results",
+  "Display_SelectAttribute": "Select attribute...",
   "Display_SetRandomPasswordPrompt": "Set a new random password for this user?",
   "Display_StrengthMeter": "Password Strength",
   "Display_TokenDestination": "Token Destination",
@@ -45,6 +49,7 @@
   "Field_Username": "User Name",
   "Long_Title_VerificationSend": "Before this user can be selected, the user's identity must be verified.  Please select a verification method.",
   "Placeholder_Search": "Search",
+  "Title_AdvancedSearch": "Advanced Search",
   "Title_ChangePassword": "Change Password",
   "Title_DirectReports": "Direct Report(s)",
   "Title_HelpDesk": "Help Desk",
