admin log-viewer enhancements added csp form-action directive

--- a/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -30,7 +30,7 @@ Category_Description_AUDIT_CONFIG=Auditing
 Category_Description_AUDIT_FORWARD=Auditing
 Category_Description_AUDITING=Auditing
 Category_Description_BASIC_SSO=Basic Authentication
-Category_Description_CAPTCHA=Captcha functionality uses an implementation of reCAPTCHA to prevent non-human attacks.  If this server faces the public internet, it is strongly recommended to enable the CAPTCHA functionality.  reCAPTCHA information can be found at <a href\="http\://www.google.com/recaptcha" target\="_blank">http\://www.google.com/recaptcha/</a><br/><br/>Registration at the reCAPTCHA site provides a public and private key which you must configure here for reCAPTCHA support.
+Category_Description_CAPTCHA=Captcha functionality uses an implementation of reCAPTCHA to prevent non-human attacks.  If this server faces the public internet, it is strongly recommended to enable the CAPTCHA functionality.  reCAPTCHA information can be found at <a href\="http\://www.google.com/recaptcha" target\="_blank">http\://www.google.com/recaptcha/</a><br/><br/>Registration at the reCAPTCHA site provides a site key and secret which you must configure here for reCAPTCHA support.
 Category_Description_CAS_SSO=
 Category_Description_CHALLENGE_POLICY=Define the challenge policy users use for populating response answers.
 Category_Description_CHALLENGE=Settings that control the Challenge/Response features.  These global settings apply regardless of the challenge policy.  For profile-specific challenge settings, see Profiles --> Challenge Profiles.
@@ -737,8 +737,8 @@ Setting_Label_audit.userEvent.toAddress=User Audit Event Email Alerts
 Setting_Label_basicAuth.enable=Enable Basic Authentication
 Setting_Label_captcha.intruderAttemptTrigger=Captcha Intruder Attempt Trigger
 Setting_Label_captcha.protectedPages=CAPTCHA Protected Pages
-Setting_Label_captcha.recaptcha.privateKey=reCAPTCHA Private Key
-Setting_Label_captcha.recaptcha.publicKey=reCAPTCHA Public Key
+Setting_Label_captcha.recaptcha.privateKey=reCAPTCHA Secret
+Setting_Label_captcha.recaptcha.publicKey=reCAPTCHA Site Key
 Setting_Label_captcha.skip.cookie=Captcha Skip Cookie
 Setting_Label_captcha.skip.param=Captcha Skip Parameter Value
 Setting_Label_cas.clearPassUrl=CAS ClearPass URL
