ldap-backed clustering mode

--- a/server/src/main/resources/password/pwm/i18n/Error.properties
+++ b/server/src/main/resources/password/pwm/i18n/Error.properties
@@ -162,7 +162,7 @@ Error_PasswordOnlyBad=Password incorrect.  Please try again.
 Error_RecoverySequenceIncomplete=A problem occurred during the forgotten password sequence, please try again.
 Error_FileTypeIncorrect=The file type is not correct.
 Error_FileTooLarge=The file is too large.
-
+Error_ClusterServiceError=An error occurred with the cluster service: %1%.   Check the log files for more information.
 Error_RemoteErrorValue=Remote Error: %1%
 
 Error_ConfigUploadSuccess=File uploaded successfully
