--- a/server/src/main/resources/password/pwm/i18n/Health.properties
+++ b/server/src/main/resources/password/pwm/i18n/Health.properties
@@ -40,6 +40,7 @@ HealthMessage_BrokenMethod=broken method invocation for '%1%', error: %2%
 HealthMessage_Appliance_PendingUpdates=Appliance updates are available.
 HealthMessage_Appliance_UpdatesNotEnabled=Appliance auto-update service is not enabled.
 HealthMessage_Appliance_UpdateServiceNotConfigured=Appliance update service has not been configured.
+HealthMessage_Cluster_Error=The cluster system can not operate normally: %1%
 HealthMessage_Config_NoSiteURL=The site URL is not configured, please configure %1%
 HealthMessage_Config_LDAPWireTrace=The %1% setting is enabled and should be disabled for proper security
 HealthMessage_Config_PromiscuousLDAP=%1% setting should be set to false for proper security
