fix incorrect case for helpdesk title display key

--- a/client/src/i18n/translations_en.json
+++ b/client/src/i18n/translations_en.json
@@ -47,7 +47,7 @@
   "Placeholder_Search": "Search",
   "Title_ChangePassword": "Change Password",
   "Title_DirectReports": "Direct Report(s)",
-  "Title_HelpDesk": "Help Desk",
+  "Title_Helpdesk": "Help Desk",
   "Title_HelpDeskCard": "Help Desk Cards",
   "Title_HelpDeskTable": "Help Desk Table",
   "Title_Management": "Management",
